@@ -1,4 +1,4 @@
-.TH LESSKEY 1 "Version 408: 01 Oct 2007"
+.TH LESSKEY 1 "Version 409: 12 Oct 2007"
 .SH NAME
 lesskey \- specify key bindings for less
 .SH SYNOPSIS
